# secure-mcp-server-framework

./: .env  .env.example  Dockerfile  README.md  constraints.txt  docker-compose.yml  fastmcp.yaml  pyproject.toml  requirements.txt  secure_mcp.db
mcp_server/: __init__.py  cli.py  config.py  main.py
mcp_server/api/: __init__.py  admin.py  auth.py  health.py  tools.py
mcp_server/core/: context_manager.py  mcp_protocol.py  monitoring.py  security.py  tool_manager.py
mcp_server/database/: __init__.py  models.py
secure_mcp_server/: __init__.py  auth.py  config.py  context.py  main.py  monitoring.py  security.py  tools.py
secure_mcp_server/database/: __init__.py  connection.py  models.py
