[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure-mcp-server"
version = "1.0.0"
description = "A secure, production-ready MCP server with authentication, monitoring, and multi-tenant support"
authors = [{name = "Dushyant", email = "dushyantkv508@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastmcp>=0.5.0",
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.8",
]

[project.urls]
Homepage = "https://github.com/dushyantzz/secure-mcp-server-framework"
Repository = "https://github.com/dushyantzz/secure-mcp-server-framework"
Issues = "https://github.com/dushyantzz/secure-mcp-server-framework/issues"
Documentation = "https://github.com/dushyantzz/secure-mcp-server-framework#readme"

[project.scripts]
secure-mcp = "secure_mcp_server.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]